@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:ext="http://www.liquibase.org/xml/ns/dbchangelog-ext" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog-ext http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-ext.xsd http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.3.xsd">
+    <!-- TODO: this likely can be retired, I don't think it's needed any more? -->
     <changeSet dbms="mysql,mariadb" author="apiman" id="1434723514712-1">
         <sql dbms="mysql,mariadb">
             CREATE TABLE hibernate_sequence (next_val bigint(20) DEFAULT NULL) ENGINE=InnoDB DEFAULT CHARSET=latin1;
@@ -10,7 +11,7 @@
         </sql>
     </changeSet>
 
-    <changeSet dbms="h2,postgresql" author="apiman (generated)" id="1434723514712-2">
-        <createSequence sequenceName="hibernate_sequence" startValue="999"/>
+    <changeSet author="apiman (generated)" dbms="!mysql,!mariadb" id="1434723514712-2">
+        <createSequence sequenceName="hibernate_sequence" startValue="999"/> <!-- Why 999? -->
     </changeSet>
 </databaseChangeLog>
